syntax = "proto3";

package escrow;

option java_package = "io.singularitynet.daemon.escrow";
option go_package = "../escrow";

service ProviderControlService {

    //Get the list of all unclaimed "payments".
    //in PaymentsSignatureReply signatures MUST be omitted

    //if signature field is present then response should be considered as invalid
    rpc GetListUnclaimed(GetPaymentsListRequest)  returns (PaymentsListReply) {}

    //get list of all payments in progress
    rpc GetListInProgress(GetPaymentsListRequest) returns (PaymentsListReply) {}

    //initialize claim for specific channel
    rpc StartClaim(StartClaimRequest) returns (PaymentReply) {}

    //initiate multiple claims at a time
    rpc StartClaimForMultipleChannels(StartMultipleClaimRequest) returns (PaymentsListReply) {}

}


message GetPaymentsListRequest {
    //address of MultiPartyEscrow contract
    string mpe_address = 1;
    //current block number (signature will be valid only for short time around this block number)
    uint64 current_block = 2;
    //signature of the following message:
    //for GetListUnclaimed ("__list_unclaimed", mpe_address, current_block_number)
    //for GetListInProgress ("__list_in_progress", mpe_address, current_block_number)
    bytes signature = 3;
}

message StartClaimRequest {
    //address of MultiPartyEscrow contract
    string mpe_address = 1;
    //channel_id contains id of the channel which state is requested.
    bytes channel_id = 2;
    //signature of the following message ("__start_claim", mpe_address, channel_id, channel_nonce)
    bytes signature = 3;
}

message PaymentReply {
    bytes channel_id    = 1;

    bytes channel_nonce = 2;

    bytes signed_amount = 3;

    //this filed must be OMITED in GetListUnclaimed request
    bytes signature = 4;

    //indicative of the Channel Expiry in block number
    bytes channel_expiry = 5;
}

message PaymentsListReply {
    repeated PaymentReply payments = 1;
}

message StartMultipleClaimRequest {
    //address of MultiPartyEscrow contract
    string mpe_address = 1;
    repeated uint64 channel_ids    = 2;
    uint64 current_block = 3;
    //signature will be as follows ( sequence is an ascending order of channel_ids)
    //("__StartClaimForMultipleChannels_, mpe_address,channel_id1,channel_id2,...,current_block_number)
    bytes signature = 4;
}